--- a/views/index.pug
+++ b/views/index.pug
@@ -5,10 +5,10 @@ html(lang="en")
     script.
       var gon = !{JSON.stringify(gon)};
   body
-    nav.navbar.navbar-expand-lg.navbar-light.bg-faded
-      a.navbar-brand(href="/") Chat
-      button.navbar-toggler(data-toggle="collapse" data-target="#navbarSupportedContent")
-        span.navbar-toggler-icon
+    //- nav.navbar.navbar-expand-lg.navbar-light.bg-faded
+    //-   a.navbar-brand(href="/") Chat
+    //-   button.navbar-toggler(data-toggle="collapse" data-target="#navbarSupportedContent")
+    //-     span.navbar-toggler-icon
     .container
       #chat
       // block content
