some new features

--- a/assets/application.css
+++ b/assets/application.css
@@ -1,3 +1,30 @@
 .fade.in {
   opacity: 1;
 }
+
+.b-scrollbar {
+	overflow-y: scroll;
+}
+
+.b-scrollbar::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+}
+
+.b-scrollbar::-webkit-scrollbar {
+	width: 10px;
+}
+
+.b-scrollbar::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgb(122,153,217)),
+									   color-stop(0.72, rgb(73,125,189)),
+									   color-stop(0.86, rgb(28,58,148)));
+}
+
+button:focus {
+	outline: none;
+}
