--- a/assets/application.css
+++ b/assets/application.css
@@ -7,8 +7,8 @@
 }
 
 .b-scrollbar::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+	border-radius: 6px;
 }
 
 .b-scrollbar::-webkit-scrollbar {
@@ -16,13 +16,29 @@
 }
 
 .b-scrollbar::-webkit-scrollbar-thumb {
-	border-radius: 10px;
+	border-radius: 6px;
 	background-image: -webkit-gradient(linear,
 									   left bottom,
 									   left top,
 									   color-stop(0.44, rgb(122,153,217)),
 									   color-stop(0.72, rgb(73,125,189)),
 									   color-stop(0.86, rgb(28,58,148)));
+}
+
+.b-overflow-hidden {
+	overflow: hidden;
+}
+
+.b-flex-grow {
+	flex-grow: 1;
+}
+
+.b-app-height {
+	height: 90vh;
+}
+
+.b-cursor-pointer {
+	cursor: pointer;
 }
 
 button:focus {
