--- a/assets/application.css
+++ b/assets/application.css
@@ -7,7 +7,7 @@
 }
 
 .b-scrollbar::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
 	border-radius: 6px;
 }
 
@@ -20,9 +20,9 @@
 	background-image: -webkit-gradient(linear,
 									   left bottom,
 									   left top,
-									   color-stop(0.44, rgb(122,153,217)),
-									   color-stop(0.72, rgb(73,125,189)),
-									   color-stop(0.86, rgb(28,58,148)));
+									   color-stop(0.44, rgb(122, 153, 217)),
+									   color-stop(0.72, rgb(73, 125, 189)),
+									   color-stop(0.86, rgb(28, 58, 148)));
 }
 
 .b-overflow-hidden {
