--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,6 @@ html(lang="en")
       var gon = !{JSON.stringify(gon)};
   body
     .container
-      #chat
+      #chat.border.border-secondary.p-4.my-4.rounded
       // block content
     script(src='/assets/main.js')
