--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ html(lang="en")
     script.
       var gon = !{JSON.stringify(gon)};
   body
-    .container
-      #chat.border.border-secondary.p-4.my-4.rounded
+    #container.container.d-flex
+      #chat.border.border-secondary.p-4.m-auto.rounded.b-flex-grow
       // block content
     script(src='/assets/main.js')
